# Rankade.py

./: .drone.yml  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.gitea/workflows/: publish_to_pypi.yaml
docs/: conf.py  index.md  spelling_wordlist.txt
docs/changelog/: index.md
docs/develop/: index.md
docs/docker/: Dockerfile  manifest.tmpl
docs/examples/: advanced.md  basic.md
examples/: basic.py  games_search.py  match_submit.py  players.py
rankade/: Api.py  Api.pyi  Consts.py  Consts.pyi  Error.py  Error.pyi  Errors.py  Errors.pyi  Faction.py  Faction.pyi  Game.py  Game.pyi  Games.py  Games.pyi  Match.py  MatchStatus.py  MatchStatus.pyi  Matches.py  Matches.pyi  Page.py  Page.pyi  Player.py  Players.py  Quota.py  Rankade.py  Rankade.pyi  RankadeClass.py  RankadeExceptions.py  RankadeExceptions.pyi  RankadeObject.py  Ranking.py  Rankings.py  ResultList.py  Subset.py  Subsets.py  TokenAuth.py  __init__.py  __init__.pyi
rankade/api/: Api.py  Api.pyi  Endpoint.py  Endpoint.pyi  RankadeResponse.py  RankadeResponse.pyi  Token.py  Token.pyi  __init__.py  __init__.pyi
rankade/models/: Base.py  Base.pyi  Error.py  Error.pyi  Faction.py  Faction.pyi  Game.py  Game.pyi  Match.py  Match.pyi  NewMatch.py  NewMatch.pyi  NewMatchResponse.py  NewMatchResponse.pyi  Player.py  Player.pyi  Quota.py  Quota.pyi  Ranking.py  Ranking.pyi  Subset.py  Subset.pyi  Token.py  __init__.pyi
src/rankade/api/: Api.py  Endpoint.py
stubs/rankade/: Rankade.pyi  RankadeExceptions.pyi
tests/: consts.py  model_test.py  test_api.py  test_match_creation.py  test_models.py  test_rankadeclass.py
(+14 files in other folders)
