[metadata]
name = rankade.py
version = attr: rankade.__version__
author = 14zombies
author_email = c@14zombies.com
url = https://git.14zombies.com/cal/rankade.py
description = Python wrapper for the Rankade API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

license_files = LICENSE

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8, <4
setup_requires = 
    aiohttp>=3.7, < 4.0
    PyJWT>=2.4, < 3.0

install_requires =
    aiohttp>=3.7, < 4.0
    PyJWT>=2.4, < 3.0

[options.packages.find]
where=src